# DAWN

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py
app/vjepa/: utils.py
app/vjepa_2_1/: transforms.py  utils.py  wrappers.py
app/vjepa_2_1/models/: predictor.py  vision_transformer.py
app/vjepa_cowa_world_model/: __init__.py  val_command.py
app/vjepa_cowa_world_model/diffusion_utils/: __init__.py  dpm_solver_pytorch.py  sampling.py  sde.py
app/vjepa_cowa_world_model/losses/: __init__.py  diffusion_loss.py  ppo_loss.py  sigreg.py  single_model_loss.py  token_ae_sem_loss.py  wta_loss.py
app/vjepa_cowa_world_model/models/: __init__.py  diffusion_head.py  diffusion_planner.py  diffusion_refinement_decoder.py  drive_jepa_img_encoder.py  lewm_modules.py  multimodal_planner.py  prefix_conditioned_diffusion_planner.py  proposal_mode_expansion.py  proposal_providers.py  refinement_decoder.py  refinement_decoder_factory.py  refinement_planner.py  seeded_diffusion_planner.py  token_ae.py  token_ae_det_head.py
app/vjepa_droid/: transforms.py  utils.py
configs/: nuscenes_inference_base.yaml  nuscenes_inference_example.yaml
scripts/: __init__.py  infer_nuscenes_val.py
src/hub/: backbones.py
src/masks/: multiseq_multiblock3d.py
src/models/: ac_predictor.py  predictor.py  vision_transformer.py
src/utils/: checkpoint_loader.py  distributed.py  logging.py  schedulers.py  wrappers.py
tests/: __init__.py  test_infer_nuscenes_val.py  test_val_command_action_history.py
tools/: convert_nuscenes_to_navsim_pkl.py
(+39 files in other folders)
