[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuscenes-world-model-inference"
version = "0.1.0"
description = "Offline nuScenes/NavSim-PKL inference for V-JEPA world-model trajectory planners."
requires-python = ">=3.11"
dependencies = [
  "torch>=2",
  "torchvision",
  "numpy",
  "pyyaml",
  "opencv-python",
  "pillow",
  "scipy",
  "timm",
  "einops",
  "iopath",
  "tensorboard",
  "pandas",
  "peft",
]

[tool.setuptools.packages.find]
include = ["app*", "src*", "scripts*"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
